# homelab-babel

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
inventory/groups/: china.yaml  tailscale.yaml
inventory/hosts/: home-huidong.yml  server-guangzhou.yml  server-la.yml  tabris.yml  test-archlinux.yml  vm-aio.yml
modules/apps/gitea/: __init__.py  docker-compose.yml  main.py
modules/apps/gitea/runner/: config.yaml  docker-compose.yml
modules/apps/jellyfin/: docker-compose.yml  main.py
modules/apps/mihomo/: README.md  __init__.py  metacubexd-compose.yml  setup.py  webui.py
modules/apps/peerbanhelper/: docker-compose.yml  main.py
modules/apps/qbittorrent/: docker-compose.yml  main.py
modules/apps/tailscale/: __init__.py  get_ip.py
modules/core/: __init__.py  inventory.py  vault.py
modules/core/inventory/: __init__.py  group.py  host.py  inventory.py
modules/docker/: __init__.py  daemon.json  main.py
modules/fs/: __init__.py  main.py
modules/package_manager/pacman/: install.py  setup.py
modules/package_manager/yay/: install.py  setup.py  utils.py
modules/systemd/: service.py
modules/tailscale/: __init__.py  get_ip.py
modules/template/: template.py
playbooks/: server-la_gitea_runners.py  tabris_bt.py  tabris_gitea.py  tabris_mihomo.py
scripts/: encrypt-string.sh  git-push.sh  install.sh  play.sh
